# local-asr-server

./: .gitignore  AGENTS.md  ClosedRoom.spec  README.md  build.sh  create_dmg.sh  pyproject.toml  run.sh  setup.sh
build_assets/: entitlements.plist
build_assets/ClosedRoomNativeCapture.app/Contents/: Info.plist
build_assets/hooks/: hook-mlx.py  pyi_rth_mlx.py
docs/: audio-intelligence-vad-plan.md  features.md  implementation_plan.md  paino di refactoring UX-UI.md  runtime-service-architecture-plan.md  ux_ui_analysis.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: apiClient.ts  config.ts
frontend/src/context/: ToastContext.tsx
frontend/src/hooks/: useAudioDevices.ts  useRecorder.ts
frontend/src/i18n/: i18n.tsx
frontend/src/i18n/locales/: en.ts  (+1 more)
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  MeetingDetailPage.tsx  ProjectsPage.tsx  RecordingOverlayPage.tsx  RecordingPage.tsx  SettingsPage.tsx  TranscriptionPage.tsx
frontend/src/utils/: audioVisualizer.ts  formatters.ts  markdown.tsx  meetingInsights.ts
skills/build-guided-product-tours/: SKILL.md
skills/build-guided-product-tours/agents/: openai.yaml
skills/build-guided-product-tours/references/: quality-checklist.md
skills/build-guided-product-tours/scripts/: check_tour_targets.py
skills/maintain-feature-docs/: SKILL.md
skills/maintain-feature-docs/agents/: openai.yaml
skills/structured-change-guard/: SKILL.md
skills/structured-change-guard/agents/: openai.yaml
src/local_asr_server/: analysis_jobs.py  analysis_templates.py  app_identity.py  asr_models.py  audio_diagnostics.py  audio_router.py  catalog.py  cli.py  launchd.py  llm.py  menubar.py  native_capture.py  paths.py  prompts.py  recordings.py  schemas.py  server.py  settings.py  transcriber.py  transcription_jobs.py  transcription_quality.py  transcriptions.py  window.py
src/local_asr_server/audio_intelligence/: __init__.py  audio_io.py  features.py  pipeline.py  vad.py
src/local_asr_server/jobs/: __init__.py  job_store.py  models.py
src/local_asr_server/macos_audio_helper/: __init__.py  audio_helper.swift  compile.py
src/local_asr_server/native_capture_helper/: __init__.py  compile.py  native_capture_helper.swift
src/local_asr_server/routers/: __init__.py  helpers.py  recordings.py  system.py  transcriptions.py
src/local_asr_server/runtime/: __init__.py  asr_worker.py  llm_sidecar.py  models.py  service_manager.py
src/local_asr_server/services/: __init__.py  analysis_service.py  transcription_service.py
test/: test_analysis_api.py  test_audio_diagnostics.py  test_audio_intelligence.py  test_audio_router.py  test_caching.py  test_cli.py  test_job_store.py  test_llm_sidecar.py  test_native_capture.py  test_nemotron_asr.py  test_paths.py  test_recording_api.py  test_recordings.py  test_runtime_services.py  test_transcriber_vad.py  test_transcription_merge.py  test_transcription_quality.py
website/: index.html
(+112 files in other folders)
