[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-asr-server"
version = "0.1.0"
description = "Local ASR server with OpenAI-compatible transcription endpoint, powered by MLX Whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "mlx-whisper",
    "mlx-audio[stt]",
    "onnxruntime>=1.14.0,<1.24.0",
    # Local LLM inference (Nemotron text + Voxtral audio)
    "local-llm-server @ file:///Users/moltisantid/Personal/local-llm-server/dist/local_llm_server-0.3.0-py3-none-any.whl",
    # Audio preprocessing for Voxtral multimodal analysis
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# macOS menu bar mode — install with: uv pip install -e ".[app]"
app = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pynput>=1.7.6",
]
# Build tooling — install with: uv pip install -e ".[build]"
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
local-asr = "local_asr_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_asr_server = [
    "static/*",
    "static/**/*",
    "macos_audio_helper/*.swift",
    "native_capture_helper/*.swift",
]
